forms-flow-bpm/infra/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-bpm
  namespace : forms-flow-bpm
  labels:
    app.kubernetes.io/name: camunda
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: camunda
  template:
    metadata:
      labels:
        app.kubernetes.io/name: camunda
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-bpm
          image: sofiamunicipalitydigitall/forms-flow-bpm:latest
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo '212.73.136.24 digital-idm.digitalsofia.digital digital-api.digitalsofia.digital digital.digitalsofia.digital digital-formio.digitalsofia.digital digital-admin-api.digitalsofia.digital' >> /etc/hosts"]
          #command: [ "/bin/sh", "-c", "--" ]
          #args: [ "while true; do sleep 3600; done;" ]
          ports:
            - containerPort: 8080
              name: http-camunda
              protocol: TCP
